<resources>
    <string name="app_name">Kitabee</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_picture_of_user">profile picture of user</string>
    <string name="phone_number">Phone Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="lets_introduce">Lets Introduce</string>
    <string name="edit_profile_picture">edit profile picture</string>
    <string name="email_phone">Email/Phone</string>
    <string name="title_activity_login_compose">LoginComposeActivity</string>
    <string name="add_new_book">add new book</string>
    <string name="create_account"><u>Create Account</u></string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="done">Done</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="or">Or</string>
    <string name="book_image">book image</string>
    <string name="signup">SignUp</string>
    <string name="home">Home</string>
    <string name="my_books">My books</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="default_user_loaction">Bombay Bazaar</string>
    <string name="user_location_picker">user location picker</string>
    <string name="dummy_book_title">Crack the coding interview</string>
    <string name="publisher">Publisher :</string>
    <string name="author">Author :</string>
    <string name="edition">Edition :</string>
    <string name="title_of_the_book">Title of the book</string>
    <string name="dummy_description">Description of the book which is currently being uploaded for selling in the server</string>
    <string name="upload">Upload</string>

</resources>