<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginFragment">


    <View
        android:id="@+id/background_shape"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/group_13newshape"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.3"
        android:textSize="48sp"
        android:layout_marginStart="45dp"
        app:layout_constraintStart_toStartOf="@id/background_shape"
        app:layout_constraintTop_toTopOf="@id/background_shape"
        app:layout_constraintBottom_toBottomOf="@id/background_shape"
        />


    <EditText
        android:id="@+id/username"
        android:layout_height="50dp"
        android:layout_width="300dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/background_shape"
        android:background="@drawable/edit_text_background"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:elevation="10dp"
        android:hint="@string/email_phone"
        />
    <EditText
        android:id="@+id/password"
        android:layout_height="50dp"
        android:layout_width="300dp"
        android:layout_marginTop="20dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username"
        android:background="@drawable/edit_text_background"
        android:elevation="10dp"
        android:hint="@string/password"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#EE5959"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="25dp"
        android:text="@string/done"
        app:cornerRadius="25dp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/google_button"
        android:layout_width="300dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/done_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        app:icon="@drawable/google_icon"
        app:iconSize="20dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        app:iconTintMode="multiply"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        android:text="@string/continue_with_google"
        app:cornerRadius="25dp"
        />

    <TextView
        android:id="@+id/or_template"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        app:layout_constraintTop_toBottomOf="@id/google_button"
        app:layout_constraintStart_toStartOf="@id/google_button"
        app:layout_constraintEnd_toEndOf="@id/google_button"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        app:layout_constraintStart_toStartOf="@id/or_template"
        app:layout_constraintEnd_toEndOf="@id/or_template"
        app:layout_constraintTop_toBottomOf="@id/or_template"
        android:layout_marginTop="10dp"
        android:textColor="@color/appColor"
        />

</androidx.constraintlayout.widget.ConstraintLayout>