<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileSetUpFragment">

    <View
        android:id="@+id/background_shape"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/group_13newshape"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lets_introduce"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.3"
        android:textSize="48sp"
        android:layout_marginStart="35dp"
        app:layout_constraintStart_toStartOf="@id/background_shape"
        app:layout_constraintTop_toTopOf="@id/background_shape"
        app:layout_constraintBottom_toBottomOf="@id/background_shape"
        />
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:alpha="0.5"
        android:src="@drawable/ic_baseline_person_24"
        app:shapeAppearance="@style/roundCornerStyle"
        app:layout_constraintBottom_toBottomOf="@+id/background_shape"
        app:layout_constraintStart_toStartOf="@id/first_name"
        app:layout_constraintTop_toBottomOf="@id/background_shape"
        android:contentDescription="@string/profile_picture_of_user"
        app:layout_constraintVertical_bias="0.313" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/profile_picture"
        app:layout_constraintEnd_toEndOf="@id/profile_picture"
        app:layout_constraintTop_toTopOf="@id/profile_picture"
        app:layout_constraintBottom_toBottomOf="@id/profile_picture"
        android:visibility="gone"
        />
    <ImageView
        android:id="@+id/edit_profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_camera_alt_24"
        app:layout_constraintStart_toStartOf="@id/profile_picture"
        app:layout_constraintEnd_toEndOf="@id/profile_picture"
        app:layout_constraintTop_toTopOf="@id/profile_picture"
        app:layout_constraintBottom_toBottomOf="@id/profile_picture"
        android:contentDescription="@string/edit_profile_picture"
        />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_background"
        android:elevation="10dp"
        android:hint="@string/first_name"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:layout_marginTop="20dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_picture"
        tools:ignore="DuplicateClickableBoundsCheck"
        android:autofillHints="false" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_background"
        android:elevation="10dp"
        android:hint="@string/last_name"
        android:inputType="text"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_name"
        tools:ignore="DuplicateClickableBoundsCheck"
        android:autofillHints="false" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_background"
        android:elevation="10dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/last_name"
        tools:ignore="DuplicateClickableBoundsCheck"
        android:autofillHints="false" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#EE5959"
        app:layout_constraintTop_toBottomOf="@id/phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="25dp"
        android:text="@string/done"
        app:cornerRadius="25dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>